--- a/index.html
+++ b/index.html
@@ -42,21 +42,35 @@
   var snakeY=[0,0,0]
   var foodX=2;
   var foodY=3;
-  var KeyCode=39;
+  var KCode=39;
   var move;
   window.onload=function(){
     createMap(); 
     createSnake();
     createFood();
-   // setInterval(snakeMove,1300);
+   move=setInterval(snakeMove,300);
     document.onkeydown=keyDown;
   }
   /////////////////////////
   function snakeMove(){
     cleanSnake();
-    for(var i=0;i<snakeX.length;i++){
+    for(var i=0;i<snakeX.length-1;i++){
       snakeX[i]=snakeX[i+1];
       snakeY[i]=snakeY[i+1];
+    }
+    switch(KCode){
+      case 37://left
+      snakeX[snakeX.length-1]--;
+      break;
+      case 38://
+      snakeY[snakeX.length-1]--;
+      break;
+      case 39:
+      snakeX[snakeX.length-1]++;
+      break;
+      case 40:
+      snakeY[snakeX.length-1]++;
+      break;
     }
     createSnake();
   }
@@ -95,8 +109,16 @@ function createSnake(){
 }
 //////////////////////////
   function keyDown(e){
-   let KeyCode=(window.event)?e.which:e.KeyCode;
-   alert(KeyCode);
+   let k=(window.event)?e.which:e.KeyCode;
+   if(KCode===37&&k===39||KCode===39&&k===37||
+     KCode===38&&k===40||KCode===40&&k===38){
+       return;
+     }
+     var r=KCode-k;
+     if(r===2||r===-2){
+       return;
+     }
+   KCode= k;
 }
 ///////////////////////////
   function createMap(){
